<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.hassannaqvi.fas.ui.tool1.InfoActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="com.example.hassannaqvi.fas.ui.tool1.InfoActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:layoutDirection="rtl"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:paddingBottom="5sp">

        <LinearLayout style="@style/linerlayout_view">

            <LinearLayout
                android:id="@+id/fldGrpllInfoA"
                style="@style/linerlayout_view_wt_bound">

                <!--fas01a00-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linerlayout_view">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/colorPrimary"
                            android:text="@string/fas01a00"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                        <RadioGroup
                            android:id="@+id/fas01a00"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/fas01a00a"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a00a" />

                            <RadioButton
                                android:id="@+id/fas01a00b"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a00b" />

                            <RadioButton
                                android:id="@+id/fas01a00c"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a00c" />

                            <RadioButton
                                android:id="@+id/fas01a00d"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a00d" />

                        </RadioGroup>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <!--fas01a01-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linerlayout_view">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/colorPrimary"
                            android:text="@string/fas01a01"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/fas01a01"
                            style="@style/textInput"
                            android:inputType="number"
                            android:maxLength="4" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <!--fas01a02-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linerlayout_view">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/colorPrimary"
                            android:text="@string/fas01a02"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/fas01a02"
                            style="@style/textInput"
                            android:inputType="text"
                            android:maxLength="25" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <!--fas01a03-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linerlayout_view">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/colorPrimary"
                            android:text="@string/fas01a03"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                        <RadioGroup
                            android:id="@+id/fas01a03"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/fas01a03a"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a03a" />

                            <RadioButton
                                android:id="@+id/fas01a03b"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a03b" />

                            <RadioButton
                                android:id="@+id/fas01a03c"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a03c" />

                            <RadioButton
                                android:id="@+id/fas01a03d"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a03d" />

                        </RadioGroup>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <!--fas01a04-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linerlayout_view">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/colorPrimary"
                            android:text="@string/fas01a04"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                        <RadioGroup
                            android:id="@+id/fas01a04"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/fas01a04a"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a04a" />

                            <RadioButton
                                android:id="@+id/fas01a04b"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a04b" />

                            <RadioButton
                                android:id="@+id/fas01a0496"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/other" />

                            <EditText
                                android:id="@+id/fas01a0496x"
                                style="@style/textInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                                android:hint="@string/other"
                                android:inputType="text"
                                android:text='@{fas01a0496.checked? fas01a0496x.getText.toString : ""}'
                                android:visibility='@{fas01a0496.checked? View.VISIBLE : View.GONE}' />

                        </RadioGroup>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <!--fas01a05-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linerlayout_view">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/colorPrimary"
                            android:text="@string/fas01a05"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                        <RadioGroup
                            android:id="@+id/fas01a05"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/fas01a05a"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a05a" />

                            <RadioButton
                                android:id="@+id/fas01a05b"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a05b" />

                            <RadioButton
                                android:id="@+id/fas01a05c"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/fas01a05c" />

                            <RadioButton
                                android:id="@+id/fas01a0598"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/dkn" />


                        </RadioGroup>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <!--fas01a06-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linerlayout_view">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/colorPrimary"
                            android:text="@string/fas01a06"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                        <RadioGroup
                            android:id="@+id/fas01a06"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/fas01a06a"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/fas01a06b"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_weight="1"
                                android:text="@string/no" />


                        </RadioGroup>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    style="@style/button"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection"
                    android:visibility="@{fas01a06a.checked ? View.VISIBLE : View.GONE}" />

                <Button
                    android:id="@+id/btn_End"
                    style="@style/button"
                    android:layout_marginRight="10dp"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview"
                    android:visibility="@{fas01a06b.checked ? View.VISIBLE : View.GONE}" />

                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>